# lti13

./: .gitignore  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  default.nix  flake.nix  hie.yaml  lti13.cabal  research.md  shell.nix
.github/workflows/: haskell-ci.yml
lti13/: CHANGELOG.md  README.md  lti13.cabal  lti13.nix  package.yaml
lti13/src/Web/: LTI13.hs
lti13/src/Web/LTI13/: Anonymize.hs  Claims.hs  THHelpers.hs  Types.hs
lti13/tests/: AnonSpec.hs  ParsingSpec.hs
lti13/tests/testdata/: ags-scores-final.json  canvas.json  deep-linking-req.json  example.json
nix/: nixpkgs.nix  overlay.nix  sources.json
referencetool/: README.md  priv.key
src/Web/: LTI13.hs
yesod-auth-lti13/: CHANGELOG.md  README.md  TODO.md  package.yaml  yesod-auth-lti13.cabal  yesod-auth-lti13.nix
yesod-auth-lti13/example/: Main.hs
yesod-auth-lti13/src/Yesod/Auth/: LTI13.hs
yesod-auth-lti13/tests/: Spec.hs
yesod-auth-lti13/tests/Yesod/Auth/: LTI13Spec.hs
