cabal-version:       >=1.10

name:                lti13
version:             0.1.0.0
-- synopsis:
description:         A library implementing types for LTI 1.3.
-- bug-reports:
license:             LGPL-3
author:              Jade
maintainer:          Jade <software at lfcode dot ca>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
    exposed-modules:     Web.LTI13
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:      src
    build-depends:       base
                       , aeson
                       , bytestring
                       , containers
                       , http-client
                       , http-types
                       , jose-jwt
                       , oidc-client
                       , safe-exceptions
                       , text
    default-language:    Haskell2010
    ghc-options:         -Wall

source-repository head
    type: git
    location: https://github.com/lf-/lti13
