cabal-version:       >=1.10

name:                lti13
version:             0.1.0.0
-- synopsis:
description:         A library implementing types for LTI 1.3.
-- bug-reports:
license:             LGPL-3
author:              Jade
maintainer:          Jade <software at lfcode dot ca>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
    exposed-modules:     Web.LTI13
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:      src
    build-depends:       aeson                 >= 1.4.7 && < 1.5
                       , base                  >= 4.12.0 && < 5
                       , bytestring            >= 0.10.10 && < 0.11
                       , containers            >= 0.6.2 && < 0.7
                       , text                  >= 1.2.4 && < 1.3
                       , http-client           >= 0.6.4 && < 0.7
                       , http-types            >= 0.12.3 && < 0.13
                       , jose-jwt              >= 0.8.0 && < 0.9
                       , oidc-client           >= 0.5.1 && < 0.6
                       , safe-exceptions       >= 0.1.7 && < 0.2
    default-language:   Haskell2010
    ghc-options:         -Wall

source-repository head
    type: git
    location: https://github.com/lf-/lti13
