cabal-version:       >=1.10

name:                lti13
version:             0.3.0.0
synopsis:            Core functionality for LTI 1.3.
description:         A library implementing the core
                     <http://www.imsglobal.org/spec/lti/v1p3/ LTI 1.3> authentication protocol,
                     suitable for use in implementing libraries for any web framework. An example
                     use is <https://hackage.haskell.org/package/yesod-auth-lti13>
bug-reports:         https://github.com/lf-/lti13/issues
license:             LGPL-3
author:              Jade Lovelace
maintainer:          Jade Lovelace <software at lfcode dot ca>
-- copyright:
category:            Web
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md
                     ./tests/*.json

test-suite spec
    type:                exitcode-stdio-1.0
    default-language:    Haskell2010
    hs-source-dirs:      tests
    ghc-options:         -Wall
    main-is:             Spec.hs
    other-modules:
        AnonSpec
        ParsingSpec
    build-depends:       base
                       , hspec
                       , QuickCheck
                       , file-embed
                       , th-utilities
                       , text
                       , bytestring
                       , aeson
                       , lti13

library
    exposed-modules:     Web.LTI13
    -- other-modules:
    -- other-extensions:
    default-extensions:
          NamedFieldPuns
        , OverloadedStrings
        , RecordWildCards
        , DeriveGeneric

    hs-source-dirs:      src
    build-depends:       aeson                 >= 2 && < 2.2
                       , base                  >= 4.12.0 && < 5
                       , bytestring            >= 0.10.10 && < 0.12
                       , containers            >= 0.6.2 && < 0.7
                       , text                  >= 1.2.4 && < 1.3
                       , http-client           >= 0.6.4 && < 0.8
                       , http-types            >= 0.12.3 && < 0.13
                       , jose-jwt              >= 0.8.0 && < 0.10
                       , oidc-client           >= 0.5.1 && < 0.7
                       , safe-exceptions       >= 0.1.7 && < 0.2
    default-language:   Haskell2010
    ghc-options:         -Wall

source-repository head
    type: git
    location: https://github.com/lf-/lti13
