cabal-version:       >=1.10

name:                yesod-auth-lti13
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             LGPL-3
author:              Jade
maintainer:          Jade <software at lfcode dot ca>
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
    hs-source-dirs:      src/
    exposed-modules:     Yesod.Auth.LTI13
    ghc-options:         -Wall
    -- other-modules:
    -- other-extensions:
    build-depends:       base >=4.12 && <5
                       , lti13
                       , base64-bytestring >= 0.1.1.0
                       , bytestring
                       , containers
                       , cryptonite
                       , http-client
                       , microlens
                       , oidc-client
                       , random
                       , safe-exceptions
                       , text
                       , yesod-auth
                       , yesod-core
    -- hs-source-dirs:
    default-language:    Haskell2010

flag example
    description: "Should I build the Yesod example?"
    manual: False
    -- XXX: figure out how to specify cabal flags in hie.yaml so i can make
    --      this false always
    default: True

executable yesod-lti13-example
    main-is: Main.hs
    hs-source-dirs:
        example
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
          aeson
        , aeson-pretty
        , base >=4.9.0.0 && <5
        , bytestring
        , containers
        , http-conduit
        , load-env
        , text
        , warp
        , yesod
        , yesod-auth
        , yesod-auth-lti13
    if !(flag(example))
        buildable: False
    default-language: Haskell2010

source-repository head
    type: git
    location: https://github.com/lf-/lti13
